--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: My website!!!!
-subtitle: This is where I will tell my friends way too much about MEEEE
-use-site-title: true
+title: IT notebook
+subtitle: 
+use-site-title: false
 ---
 
 <div class="posts-list">
