--- a/aboutme.html
+++ b/aboutme.html
@@ -3,4 +3,9 @@ layout: page
 title: About me
 ---
 
-My name is....
+<div id="aboutme-section">
+
+<p class="about-text">
+<span class="fa fa-briefcase about-icon"></span>
+Currently an <a href="/shiny"><strong>ΙΒΜ consultant</strong></a>.
+</p>
