--- a/aboutme.html
+++ b/aboutme.html
@@ -7,5 +7,16 @@ title: About me
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Currently an <a href="/shiny"><strong>ΙΒΜ consultant</strong></a>.
+Currently <strong>ΙΒΜ consultant</strong>.
 </p>
+  
+<p class="about-text">
+<span class="fa fa-graduation-cap about-icon"></span>
+Obtained my MSc in <strong>Technologies & Applications</strong> from the University of Ioannina, Greece (Area of study: Machine Learning).
+</p>
+  
+ <p class="about-text">
+<span class="fa fa-globe about-icon"></span>
+Grew up in <i>Greece</i>; moved to <i>Barcelona</i> and after than in Frankfurt.
+</p>
+
