--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,8 @@ title: About me
 
 <div id="aboutme-section">
 
+<h2 id="contact">hello-hola-bonjour-Γεια σας</h1>
+
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
 Currently <strong>ΙΒΜ consultant</strong>.
@@ -12,11 +14,14 @@ Currently <strong>ΙΒΜ consultant</strong>.
   
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Obtained my MSc in <strong>Technologies & Applications</strong> from the University of Ioannina, Greece (Area of study: Machine Learning).
+Obtained my MSc in <strong>Technologies & Applications</strong> from the <a href="http://www.cs.uoi.gr/en/">University of Ioannina</a>(Area of study: Machine Learning).
 </p>
   
- <p class="about-text">
+<p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Grew up in <i>Greece</i>; moved to <i>Barcelona</i> and after than in Frankfurt.
+Grew up in <i>Greece</i>; moved to <i>Barcelona</i> and after than to Frankfurt am Main.
 </p>
 
+<div id="contactme-section">
+<h2 id="contact">Contact</h1>
+<p>You can <a href="mailto:zagorisiospanagiotis@gmail.com">email me</a> or find me <a href="https://www.linkedin.com/in/zagorisios-panagiotis-39bb4b83/">on Linkedin</a>.
