--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@ title: About me
 
 <div id="aboutme-section">
 
-<h2 id="contact">hello-hola-bonjour-Γεια σας</h1>
+<h2 id="contact">hello/hola/bonjour/Γεια σας</h2>
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
@@ -19,9 +19,9 @@ Obtained my MSc in <strong>Technologies & Applications</strong> from the <a href
   
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Grew up in <i>Greece</i>; moved to <i>Barcelona</i> and after than to Frankfurt am Main.
+Grew up in <i>Greece</i>; moved to <i>Barcelona</i> and after Spain, to Frankfurt am Main in Germany.
 </p>
 
 <div id="contactme-section">
-<h2 id="contact">Contact</h1>
+<h2 id="contact">Contact</h2>
 <p>You can <a href="mailto:zagorisiospanagiotis@gmail.com">email me</a> or find me <a href="https://www.linkedin.com/in/zagorisios-panagiotis-39bb4b83/">on Linkedin</a>.
